syntax = "proto3";

package NAlice;

option go_package = "a.yandex-team.ru/alice/protos/data/language";
option java_package = "ru.yandex.alice.protos.data.language";

// Languages supported by Megamind.
//
// Languages from this list are specified
// in scenario configs to filter out scenarios which don't support
// the language of the phrase being processed.
//
// See https://a.yandex-team.ru/arc/trunk/arcadia/library/cpp/langs/langs.h
// Not named as ELanguage to prevent clashing with ELanguage defined in the
// above file. Same reason for distinct enum value name convention: L_{LANG_CODE}.
enum ELang {
    L_UNK = 0; // Zero value is required by protobuf
    L_RUS = 1; // Russian
    L_ENG = 2; // English
    L_TUR = 44; // Turkish
    L_ARA = 55; // Arabic
}

enum EDialect {
    DIALECT_UNK = 0;
    DIALECT_MSA = 1;
    DIALECT_SAUDI = 2;
}
